--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -17,7 +17,7 @@ jobs:
           path: public/
 
   test:
-
+    needs: build
     runs-on: ubuntu-latest
 
     strategy:
@@ -27,11 +27,20 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - uses: actions/download-artifact@main
+      with: 
+        name: webpack artifacts
+        path: public
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
     - name: npm install, and test
+      run: |
+        npm install
+        npm test
+      env:
+        CI: true
       run: |
         npm install
         npm test
